
	* Make the 'reset' available for RoboHydraHead.

	* Potential compatibility problem: now scenarios are checked so
	that they always contain the "heads" property, and don't contain
	any unknown properties. If you are hit by this your scenarios were
	broken anyway, and better to be stricter now than later.

	* New property 'headers' for RoboHydraHeadStatic allows the user
	to set arbitrary headers for the head response(s).

Version 0.5 (2014-08-28)
------------------------

	* Potential compatibility problem: dynamic heads registered as
	"high priority" now come *after* the admin plugin. That mostly
	means that (a) you can't replace the Admin UI with your own plugin
	(you'll have to use a different URL) and that (b) you won't get
	all the admin plugin requests in robohydra.log.

	* Deprecated mixed-case configuration variables names for plugins
	(ie. variables like trafficFilePath become now trafficfilepath).

	* Deprecated inconsistent roboHydraHeadType names: some parameters
	to roboHydraHeadType were inconsistent and have been replaced with
	more consistent names. In particular, "defaultProps" becomes
	"defaultPropertyObject" and "parentPropBuilder" becomes
	"parentPropertyBuilder".

	* New head matching possibilities: now all heads accept properties
	"method" and "hostname" and will only match requests that have the
	same method(s) and/or that have the same hostname. See the
	documentation and the "advanced-matching" example for details.

	* New delayer plugin: there's a new plugin that will delay all
	requests to a given URL (by default, all of them) by a given
	number of milliseconds (by default, 2000).

	* New CORS plugin: there's a new plugin that accepts all CORS
	requests.

	* New proxy-cache plugin: there's a new proxy plugin that caches
	responses to GET requests.

	* Compatibility bugfix: Windows absolute paths work now as plugin
	load paths.

	* Configuration files: now they can specify plugin load paths and