@@ -63,6 +63,22 @@ function renderPage(res, templateName, config, userStash) {
     res.send(ejs.render(mainLayoutTemplateString, layoutStash));
 }
 
+function parseHeaders(headerString) {
+    var headerLines = headerString.split(/\r?\n/).filter(function(line) {
+        return line !== '';
+    });
+    var headerObject = {};
+    for (var i = 0, len = headerLines.length; i < len; i++) {
+        var headerLine = headerLines[i],
+            colonMatch = /: ?/.exec(headerLine);
+        if (colonMatch) {
+            headerObject[headerLine.substr(0, colonMatch.index)] =
+                headerLine.substr(colonMatch.index + colonMatch[0].length);
+        }
+    }
+    return headerObject;
+}
+
 exports.name = '*admin*';
 exports.getBodyParts = function(conf) {
     "use strict";
@@ -180,6 +196,7 @@ exports.getBodyParts = function(conf) {
                     var statusCode =
                             params.newStaticHeadStatus !== '' ?
                                 params.newStaticHeadStatus : 200;
+                    var headers = parseHeaders(params.newStaticHeadHeaders);
 
                     var defaultContentType = 'application/octet-stream';
                     try {
@@ -219,6 +236,9 @@ exports.getBodyParts = function(conf) {
                             }
 
                             if (matches) {
+                                for (var header in headers) {
+                                    res.headers[header] = headers[header];
+                                }
                                 res.headers['content-type'] = contentType;
                                 res.statusCode = statusCode;
                                 res.send(content);
