@@ -94,7 +94,7 @@
             <fieldset>
               <legend class="h3">Create a new head</legend>
 
-               <label for="newHeadType">Type:</label>
+               <label for="newHeadType">Type</label>
                <select id="newHeadType" name="newHeadType">
                  <option value="static">Static</option>
                  <option value="filesystem">File serving</option>
@@ -121,6 +121,10 @@
                  <input type="text" id="newStaticHeadContentType"
                         name="newStaticHeadContentType"
                         placeholder="text/plain, application/json, …">
+
+                 <label for="newStaticHeadContentType">Set arbitrary headers (one per line)</label>
+                 <textarea id="newStaticHeadHeaders" name="newStaticHeadHeaders"
+                           placeholder="X-Punchline: What did I do now?"></textarea>
                </div>
 
                <div style="display: none" class="new-head-props new-head-props-filesystem">
